--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,12 +1,22 @@
 <header>
   <h1 class="top">Books</h1>
 </header>
+<main>
+  <h2>Title</h2>
+  	<% @books.each do |list| %>
+  	<span><%= books.title %></span>
+  	<% end %>
+  <h2>Body</h2>
+  	<% @books.each do |list| %>
+  	<span><%= books.body %></span>
+  	<% end %>
 
 <h2>New book</h2>
 <%= form_for(@book) do |f| %>
-  <h4>Title</h4>
-  <%= f.text_field :title %>
-  <h4>Body</h4>
-  <%= f.text_area :body %>
-  <%= f.submit "Create Book" %>
+   <h4>Title</h4>
+   <%= f.text_field :title %>
+   <h4>Body</h4>
+   <%= f.text_area :body %>
+   <%= f.submit "Create Book" %>
+</main>
 <% end %>
