--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,6 +18,11 @@
   padding: 0;
   box-sizing: border-box;;
  }
+clearfix::after {
+  content: "";
+  display: block;
+  clear: both;
+}
 h1{
   font-size: 26px;
   margin: 25px 35px 5px;
@@ -27,4 +32,16 @@ a, .top-text {
   margin: 0px 65px;
   line-height: 4;
 }
-
+main {
+  margin-left: 35px;
+}
+.index-title {
+  width: 150px;
+  text-align: center;
+  float: left;
+}
+.index-body {
+  width: 450px;
+  text-align: center;
+  float: left;
+}
