--- a/app/views/books/top.html.erb
+++ b/app/views/books/top.html.erb
@@ -1,17 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="app/assets/stylesheet/application.css">
-  <title>WebCampBackendNew</title>
-</head>
-<body>
-<h1>ようこそBookersへ！</h1>
+<h1 class="top">ようこそBookersへ！</h1>
   <p class="top-text"><b>Bookers</b>では、さまざまな書籍に関するあなたの意見や<br>
   印象を共有し交換することができます
 　</p>
 <a href="/books">start</a>
 </body>
-</html>
+
 
 
