--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,11 +23,11 @@ clearfix::after {
   display: block;
   clear: both;
 }
-h1{
+.top{
   font-size: 26px;
   margin: 25px 35px 5px;
 }
-a, .top-text {
+a, .top-text, .show {
   font-size: 13px;
   margin: 0px 65px;
   line-height: 4;
@@ -43,5 +43,13 @@ main {
 .index-body {
   width: 450px;
   text-align: center;
+  float: left;
+}
+.title-text {
+  width: 150px;
+  float: left;
+}
+.body-text {
+  width: 150px;
   float: left;
 }
