--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,7 @@
   <h4 class="show">Title</h4><p>:<%= @book.title %></p>
   <h4 class="show">body</h4><p>:<%= @book.body %></p>
 
+  <%= link_to "Edit", edit_books_path(@book.id) %>
+  <%= link_to "Back", index_path %>
+
+
