--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,23 +1,29 @@
 <header>
   <h1 class="top">Books</h1>
 </header>
-<main clearfix>
-  <h4 class="index-title">Title</h4>
-  	<% @books.each do |book| %>
-  	<span class="title-text"><%= books.title %></span>
+<main>
+<table>
+  <tr>
+    <th>Title</th>
+    <th>Body</th>
+  </tr>
+    <% @books.each do |book| %>
+    <tr>
+  	<td><%= book.title %></td>
+  	<td><%= book.body %></td>
+    </tr>
   	<% end %>
-  <h4 class="index-body">Body</h4>
-  	<% @books.each do |book| %>
-  	<span class="body-text"><%= books.body %></span>
-  	<% end %>
-
+  </table>
   <h2>New book</h2>
   <%= form_for(@book) do |f| %>
   <h4>Title</h4>
   <%= f.text_field :title %>
   <h4>Body</h4>
   <%= f.text_area :body %>
-  <%= f.submit "Create Book" %>
+  <br><%= f.submit "Create Book" %>
   <% end %>
 </main>
+
+
+
 
