--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,15 +2,18 @@
   <h1 class="top">Books</h1>
 </header>
 <main>
-<table>
+<table cellspacing="10">
   <tr>
     <th>Title</th>
     <th>Body</th>
   </tr>
     <% @books.each do |book| %>
-    <tr>
+    <tr class="index">
   	<td><%= book.title %></td>
   	<td><%= book.body %></td>
+    <td><%= link_to "Show", show_book_path(book.id) %></td>
+    <td><%= link_to "Edit", edit_book_path(book.id) %>
+    <td><%= link_to "Destroy", destroy_book_path(book), method: :delete %>
     </tr>
   	<% end %>
   </table>
@@ -19,8 +22,8 @@
   <h4>Title</h4>
   <%= f.text_field :title %>
   <h4>Body</h4>
-  <%= f.text_area :body %>
-  <br><%= f.submit "Create Book" %>
+  <%= f.text_area :body %><br>
+  <%= f.submit "Create Book" %>
   <% end %>
 </main>
 
