--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,10 +1,10 @@
 <h1>Editing Book</h1>
-  <%= form_for(@book) do |f| %>
+  <%= form_for(@book, url:"/books/#{@book.id}") do |f| %>
   <h4>Title</h4>
   <%= f.text_field :title %>
   <h4>Body</h4>
-  <%= f.text_area :body %>
+  <%= f.text_area :body %><br>
   <%= f.submit "Update Book" %>
   <% end %>
-  <%= link_to "Show", show_path(@book.id) %>
-  <%= link_to "Back", index_path %>
+  <%= link_to "Show", show_book_path(@book.id) %>
+  <%= link_to "Back", books_path %>
