--- a/app/views/books/top.html.erb
+++ b/app/views/books/top.html.erb
@@ -2,7 +2,7 @@
   <p class="top-text"><b>Bookers</b>では、さまざまな書籍に関するあなたの意見や<br>
   印象を共有し交換することができます
 　</p>
-<a href="/books">start</a>
+<a class="start" href="/books">start</a>
 </body>
 
 
