[Add]作業完了メッセージ追加

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,8 @@
+<% if flash[:complete] %>
+  <div class="flash">
+    <%= flash[:complete] %>
+  </div>
+<% end %>
 <header>
   <h1 class="top">Books</h1>
 </header>
