--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,8 @@
+<% if flash[:complete] %>
+  <div class="flash">
+    <%= flash[:complete] %>
+  </div>
+<% end %>
 <table cellspacing="10">
   <tr>
     <td><b>Title:</b></td>
