--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,7 +6,7 @@
 <header>
   <h1 class="top">Books</h1>
 </header>
-<main>
+<main class="index-page">
 <table cellspacing="10">
   <tr>
     <th>Title</th>
@@ -23,6 +23,13 @@
   	<% end %>
   </table>
   <h2>New book</h2>
+  <% if @book.errors.any? %>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  <% end %>
   <%= form_for(@book) do |f| %>
   <h4>Title</h4>
   <%= f.text_field :title %>
