--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,10 +1,26 @@
-<h1>Editing Book</h1>
+<main class="edit-page">
+  <h1>Editing Book</h1>
+  <% if @book.errors.any? %>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  <% end %>
   <%= form_for(@book, url:"/books/#{@book.id}") do |f| %>
-  <h4>Title</h4>
+  <body class="edit">
+  <div>Title</div>
   <%= f.text_field :title %>
-  <h4>Body</h4>
+  <div>Body</div>
   <%= f.text_area :body %><br>
   <%= f.submit "Update Book" %>
   <% end %>
+  <div class="menu">
   <%= link_to "Show", show_book_path(@book.id) %>
+  </div>
+  |
+  <div class="menu">
   <%= link_to "Back", books_path %>
+  </div>
+</body>
+</main>
