--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,19 +6,19 @@
 <header>
   <h1 class="top">Books</h1>
 </header>
-<main class="index-page">
-<table cellspacing="10">
-  <tr>
-    <th>Title</th>
-    <th>Body</th>
-  </tr>
+<main class="index-main">
+  <table cellspacing="10">
+    <tr>
+      <th>Title</th>
+      <th>Body</th>
+    </tr>
     <% @books.each do |book| %>
-    <tr class="index">
-  	<td><%= book.title %></td>
-  	<td><%= book.body %></td>
-    <td><%= link_to "Show", show_book_path(book.id) %></td>
-    <td><%= link_to "Edit", edit_book_path(book.id) %>
-    <td><%= link_to "Destroy", destroy_book_path(book), method: :delete %>
+    <tr>
+  	  <td><%= book.title %></td>
+  	  <td><%= book.body %></td>
+      <td><%= link_to "Show", show_book_path(book.id) %></td>
+      <td><%= link_to "Edit", edit_book_path(book.id) %>
+      <td><%= link_to "Destroy", destroy_book_path(book), method: :delete %>
     </tr>
   	<% end %>
   </table>
@@ -31,11 +31,13 @@
     </ul>
   <% end %>
   <%= form_for(@book) do |f| %>
-  <h4>Title</h4>
-  <%= f.text_field :title %>
-  <h4>Body</h4>
-  <%= f.text_area :body %><br>
-  <%= f.submit "Create Book" %>
+    <div class="form-title">Title</div>
+      <%= f.text_field :title %>
+    <div class="form-body">Body</div>
+      <%= f.text_area :body %><br>
+    <div class="upload">
+      <%= f.submit " Create Book" %>
+    </div>
   <% end %>
 </main>
 
