--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -2,6 +2,7 @@
   <h1>Editing Book</h1>
     <%= form_for(@book, url:"/books/#{@book.id}") do |f| %>
     <% if @book.errors.any? %>
+    <%= @book.errors.count %> prohibited this article from being saved:
     <ul>
       <% @book.errors.full_messages.each do |message| %>
         <li><%= message %></li>
