--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -24,6 +24,14 @@
   </table>
   <h2>New book</h2>
   <%= form_for(@book) do |f| %>
+   <% if @book.errors.any? %>
+   <%= @book.errors.count %> prohibited this article from being saved:
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+    <% end %>
     <div class="form-title">Title</div>
       <%= f.text_field :title %>
     <div class="form-body">Body</div>
