--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -67,3 +67,30 @@ clearfix::after {
 .edit-main {
   margin: 30px 30px 0px;
 }
+.field_with_errors {
+  padding: 2px;
+  background-color: red;
+  display: table;
+}
+li {
+  font-size: 12px;
+  list-style: square;
+  margin-left: 60px;
+}
+.error h3{
+  width: 446px;
+  text-align: left;
+  font-weight: bold;
+  padding: 5px;
+  font-size: 12px;
+  margin-bottom: 30px;
+  background-color: #c00;
+  color: #fff;
+}
+.error {
+  width: 450px;
+  border: 2px solid red;
+  margin-bottom: 20px;
+  padding-bottom: 30px;
+  background-color: #f0f0f0;
+}
