--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -18,19 +18,21 @@
   	  <td><%= book.body %></td>
       <td><%= link_to "Show", show_book_path(book.id) %></td>
       <td><%= link_to "Edit", edit_book_path(book.id) %>
-      <td><%= link_to "Destroy", destroy_book_path(book), method: :delete %>
+      <td><%= link_to "Destroy", destroy_book_path(book), method: :delete %></td>
     </tr>
   	<% end %>
   </table>
   <h2>New book</h2>
   <%= form_for(@book) do |f| %>
-   <% if @book.errors.any? %>
-   <%= @book.errors.count %> prohibited this article from being saved:
-    <ul>
-      <% @book.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
+    <% if @book.errors.any? %>
+      <div class="error">
+        <h3><%= @book.errors.count %> prohibited this article from being saved:</h3>
+        <ul>
+          <% @book.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
     <% end %>
     <div class="form-title">Title</div>
       <%= f.text_field :title %>
