--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,3 +1,8 @@
+<% if flash[:complete] %>
+  <div class="flash">
+    <%= flash[:complete] %>
+  </div>
+<% end %>
 <main class="edit-main">
   <h1>Editing Book</h1>
     <%= form_for(@book, url:"/books/#{@book.id}") do |f| %>
@@ -20,7 +25,7 @@
     </div>
   <% end %>
     <div class="menu">
-      <%= link_to "Show", show_book_path(@book.id) %>
+      <%= link_to "Show", book_path(@book) %>
     </div>
       |
     <div class="menu">
