--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -8,7 +8,7 @@
     <%= form_for(@book, url:"/books/#{@book.id}") do |f| %>
     <% if @book.errors.any? %>
       <div class="error">
-        <h3><%= @book.errors.count %> prohibited this article from being saved:</h3>
+        <h3><%= @book.errors.count %> errors prohibited this book from being saved:</h3>
         <ul>
           <% @book.errors.full_messages.each do |message| %>
             <li><%= message %></li>
