--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -26,7 +26,7 @@
   <%= form_for(@book) do |f| %>
     <% if @book.errors.any? %>
       <div class="error">
-        <h3><%= @book.errors.count %> prohibited this article from being saved:</h3>
+        <h3><%= @book.errors.count %> errors prohibited this book from being saved:</h3>
         <ul>
           <% @book.errors.full_messages.each do |message| %>
             <li><%= message %></li>
